--- a/js-consumer-manage/src/main/resources/application.yml
+++ b/js-consumer-manage/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8081
 spring:
   application:
-    name: js-consumer-zhanghu
+    name: js-consumer-manage
   zipkin: #追踪
     base-url: http://localhost:7700
   sleuth:
@@ -15,7 +15,7 @@ eureka:
 feign:
   hystrix:
     enabled: true
-dm-spring-provider-zhanghu:
+js-provider-manage:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
 logging:
