--- a/js-producer-account/src/main/resources/application.yml
+++ b/js-producer-account/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
       #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 60000
   application:
-    name: js-producer-zhanghu
+    name: js-producer-account
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   #profiles:
