--- a/js-producer-manage/src/main/resources/application.yml
+++ b/js-producer-manage/src/main/resources/application.yml
@@ -26,6 +26,6 @@ spring:
       #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 60000
   application:
-    name: dm-spring-producer-zhanghu
+    name: js-producer-manage
   profiles:
     active: dev
