--- a/js_deposit_provider/src/main/resources/application.yml
+++ b/js_deposit_provider/src/main/resources/application.yml
@@ -29,8 +29,8 @@ spring:
     name: js-producer-deposit
   profiles:
     active: dev
-  zipkin: #追踪
-    base-url: http://localhost:7700
+#  zipkin: #追踪
+#    base-url: http://localhost:7700
   sleuth:
     sampler:
       percentage: 1.0
