--- a/js-producer-account/src/main/resources/application.yml
+++ b/js-producer-account/src/main/resources/application.yml
@@ -27,6 +27,16 @@ spring:
       timeBetweenEvictionRunsMillis: 60000
   application:
     name: js-producer-account
+  redis: #Redis配置
+      database: 0 # Redis数据库索引（默认为0）
+      host: 127.0.0.1  #Redis服务器地址
+      port: 6379 # Redis服务器连接端口
+      password: # Redis服务器连接密码（默认为空）
+      pool:
+        max-active: 20 # 连接池最大连接数（使用负值表示没有限制）
+        max-idle: 10 # 连接池中的最大空闲连接
+        max-wait: 1000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        min-idle: 5
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   #profiles:
@@ -36,3 +46,4 @@ mybatis:
   #sleuth:
   #  sampler:
    #   percentage: 1.0
+
