--- a/js_deposit_provider/src/main/resources/application.yml
+++ b/js_deposit_provider/src/main/resources/application.yml
@@ -34,5 +34,16 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0
+  rabbitmq:
+    host: 123.206.255.244
+    port: 5672
+    username: rabbit
+    password: rabbit
+    virtual-host: /rabbit-1
+    publisher-confirms: true
+    publisher-returns: true
+    listener:
+        simple:
+          prefetch: 1
 mybatis:
   mapperLocations: classpath:mapper/*.xml
