--- a/js_deposit_provider/pom.xml
+++ b/js_deposit_provider/pom.xml
@@ -35,7 +35,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.13</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
