--- a/js-denglu-provider/src/main/resources/redis.properties
+++ b/js-denglu-provider/src/main/resources/redis.properties
@@ -1,6 +1,6 @@
-redis.host=127.0.0.1
+redis.host=39.105.14.47
 redis.port=6379
-redis.pass=haibo1118
+redis.pass=
 redis.maxIdle=300
 redis.maxTotal=50
 redis.maxWaitMillis=10000
