--- a/js_deposit_provider/pom.xml
+++ b/js_deposit_provider/pom.xml
@@ -23,12 +23,29 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <spring-cloud.version>Dalston.SR4</spring-cloud.version>
+        <lcn.last.version>4.1.0</lcn.last.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>transaction-springcloud</artifactId>-->
+            <!--<version>${lcn.last.version}</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>com.codingapi</groupId>-->
+            <!--<artifactId>tx-plugins-db</artifactId>-->
+            <!--<version>${lcn.last.version}</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
