--- a/js-denglu-provider/src/main/resources/application.yml
+++ b/js-denglu-provider/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
 spring:
   datasource:
     # 使用druid数据源
-    url: jdbc:mysql://localhost:3306/bank?charecterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.51.41:3306/bank?charecterEncoding=UTF-8&useSSL=false
     username: root
     password: root
     type: com.alibaba.druid.pool.DruidDataSource
