--- a/js-producer-remittance/src/main/resources/application.yml
+++ b/js-producer-remittance/src/main/resources/application.yml
@@ -40,15 +40,15 @@ spring:
     listener:
         simple:
           prefetch: 1
-  redis: #Redis配置
-        database: 0 # Redis数据库索引（默认为0）
-        host: 127.0.0.1  #Redis服务器地址
-        port: 6379 # Redis服务器连接端口
-        password: # Redis服务器连接密码（默认为空）
-        pool:
-          max-active: 20 # 连接池最大连接数（使用负值表示没有限制）
-          max-idle: 10 # 连接池中的最大空闲连接
-          max-wait: 1000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
-          min-idle: 5
+#  redis: #Redis配置
+#        database: 0 # Redis数据库索引（默认为0）
+#        host: 127.0.0.1  #Redis服务器地址
+#        port: 6379 # Redis服务器连接端口
+#        password: # Redis服务器连接密码（默认为空）
+#        pool:
+#          max-active: 20 # 连接池最大连接数（使用负值表示没有限制）
+#          max-idle: 10 # 连接池中的最大空闲连接
+#          max-wait: 1000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+#          min-idle: 5
 mybatis:
   mapper-locations: classpath:mapper/*.xml
