--- a/js-producer-remittance/pom.xml
+++ b/js-producer-remittance/pom.xml
@@ -86,6 +86,13 @@
             <artifactId>jedis</artifactId>
             <!--<version>2.9.0</version>-->
         </dependency>
+        <!--分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <!-- 特别注意版本问题, 看到评论以后得以纠正 -->
+            <version>1.2.3</version>
+        </dependency>
         <!--mysql-->
         <dependency>
             <groupId>mysql</groupId>
