--- a/js-producer-loans/src/main/resources/application.yml
+++ b/js-producer-loans/src/main/resources/application.yml
@@ -26,7 +26,10 @@ spring:
       #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
       timeBetweenEvictionRunsMillis: 60000
   application:
-    name: js-producer-deposit
+    name: js-producer-loans
+  thymeleaf:
+      cache: false
+      suffix: .html
   profiles:
     active: dev
   zipkin: #追踪
@@ -34,3 +37,16 @@ spring:
   sleuth:
     sampler:
       percentage: 1.0
+  rabbitmq:
+      host: 123.206.255.244
+      port: 5672
+      username: rabbit
+      password: rabbit
+      virtual-host: /rabbit-1
+      publisher-confirms: true
+      publisher-returns: true
+      listener:
+          simple:
+            prefetch: 1
+mybatis:
+  mapperLocations: classpath:mapper/*.xml
