--- a/js-consumer-management/src/main/resources/application.yml
+++ b/js-consumer-management/src/main/resources/application.yml
@@ -3,6 +3,17 @@ server:
 spring:
   application:
     name: js-consumer-management
+  rabbitmq:
+    host: 123.206.255.244
+    port: 5672
+    username: rabbit
+    password: rabbit
+    virtual-host: /rabbit-1
+    publisher-confirms: true
+    publisher-returns: true
+    listener:
+        simple:
+          prefetch: 1
 eureka:
   client:
     service-url:
